register.component.scss & seller-dashboard.component.scss contrast fixes

--- a/Frontend/src/app/components/seller-dashboard/seller-dashboard.component.scss
+++ b/Frontend/src/app/components/seller-dashboard/seller-dashboard.component.scss
@@ -249,11 +249,11 @@
     }
 
     &.btn-edit {
-      background-color: #28a745;
+      background-color: #1e7e34;
       color: white;
 
       &:hover {
-        background-color: #218838;
+        background-color: #155724;
       }
     }
 
@@ -262,7 +262,7 @@
       color: white;
 
       &:hover {
-        background-color: #c82333;
+        background-color: #A00000;
       }
     }
   }
